# bitnetrs

./: .gitignore  Bitnet Rust Reimplementation Inference Test  Cargo.toml  README.md  backlog.md  checklist.md  gap_audit.md
.cargo/: config.toml
crates/bitnet-cli/: Cargo.toml
crates/bitnet-cli/src/: main.rs
crates/bitnet-convert/: Cargo.toml
crates/bitnet-convert/src/: lib.rs
crates/bitnet-core/: Cargo.toml
crates/bitnet-core/src/: config.rs  error.rs  lib.rs
crates/bitnet-core/src/backend/: mod.rs  ops.rs
crates/bitnet-core/src/quant/: absmax.rs  absmean.rs  mod.rs  ternary.rs
crates/bitnet-core/src/tensor/: dtype.rs  mod.rs
crates/bitnet-cpu/: Cargo.toml
crates/bitnet-cpu/src/: activation.rs  attention.rs  gemv.rs  lib.rs  norm.rs  rope.rs  simd.rs
crates/bitnet-gpu/: Cargo.toml
crates/bitnet-gpu-cuda/: Cargo.toml
crates/bitnet-gpu-cuda/src/: lib.rs
crates/bitnet-gpu-wgpu/: Cargo.toml
crates/bitnet-gpu-wgpu/src/: buffer.rs  context.rs  lib.rs  pipeline.rs
crates/bitnet-gpu-wgpu/src/shaders/: attention.wgsl  gemv.wgsl  norm.wgsl  rope.wgsl
crates/bitnet-gpu/src/: lib.rs
crates/bitnet-gpu/src/shaders/: gemv.wgsl
crates/bitnet-inference/: Cargo.toml
crates/bitnet-inference/src/: lib.rs
crates/bitnet-model/: Cargo.toml
crates/bitnet-model/src/: device.rs  lib.rs
crates/bitnet-npu/: Cargo.toml
crates/bitnet-npu/src/: detect.rs  lib.rs
crates/bitnet-tokenizer/: Cargo.toml
crates/bitnet-tokenizer/src/: lib.rs
crates/bitnet-weights/: Cargo.toml
crates/bitnet-weights/src/: config.rs  hf_hub.rs  lib.rs  loader.rs  safetensors.rs
