[package]
name        = "bitnet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for BitNet b1.58 inference"

[[bin]]
name = "bitnet"
path = "src/main.rs"

[dependencies]
bitnet-core.workspace      = true
bitnet-inference.workspace = true
bitnet-weights.workspace   = true
bitnet-tokenizer.workspace = true
anyhow.workspace           = true
tracing.workspace          = true
tracing-subscriber.workspace = true
tokio.workspace            = true
clap.workspace             = true
indicatif.workspace        = true
