[package]
name    = "bitnet-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU backend for BitNet b1.58 inference via wgpu (Vulkan/Metal/DX12/WebGPU)"

[dependencies]
bitnet-core.workspace = true
bitnet-cpu.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
bytemuck.workspace    = true
wgpu.workspace        = true
futures.workspace     = true
pollster.workspace    = true
