[package]
name = "bitnet-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU backend facade and abstraction layer for BitNet b1.58 inference"

[dependencies]
bitnet-core.workspace = true
bitnet-gpu-wgpu.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
