[package]
name        = "bitnet-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Weight loading from HuggingFace safetensors for BitNet b1.58 inference"

[dependencies]
bitnet-core.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
half.workspace        = true
safetensors.workspace = true
tokio.workspace       = true
reqwest.workspace     = true
indicatif.workspace   = true
bytemuck.workspace    = true
hf-hub.workspace      = true
sha2.workspace        = true

[dev-dependencies]
tempfile.workspace = true
